--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "sass": "^1.96.0"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0"
