--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "sass": "^1.96.0"
+    "sass": "^1.96.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0"
