--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "sass": "^1.96.0",
     "swiper": "^12.0.3"
