--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "sass": "^1.96.0",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "25.0.3",
