--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "next": "16.0.8",
+    "nodemailer": "^7.0.12",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.69.0",
