--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "sass": "^1.96.0",
+    "styled-components": "^6.1.19",
     "swiper": "^12.0.3",
     "uuid": "^13.0.0"
   },
