--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
+    "mysql2": "^3.16.0",
     "next": "16.0.8",
     "nodemailer": "^7.0.12",
     "react": "19.2.1",
